@@ -14,6 +14,7 @@
 /* ************************ Methods used by X3D Parser  ********************* */
 /* ************************************************************************** */
 uintptr_t nextScriptHandle (void);
+void zeroScriptHandles (void);
 
 
 /* ************************************************************************** */
